<resources>
    <string name="app_name">WaterIt</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="not_now">Not now</string>
    <string name="sorting_plants_alphabetically">Sort plants by name</string>

    <string name="plant_name">Name</string>
    <string name="notes">Care notes</string>
    <string name="choose_notification_periodicity_days">Frequency and time of reminders</string>
    <string name="save">Save</string>
    <string name="choose_icon_and_name">Choose icon and name of the plant</string>
    <string name="choose_plant_name">Choose plant name</string>
    <string name="choose_icon">Plant icon</string>
    <string name="choose_plant_icon">Choose plant icon or make photo</string>
    <string name="reminder_frequency_int_days">%1$d %2$s</string>
    <string name="reminder_frequency_hour_min">%1$s</string>
    <string name="image_of_plant">Image of plant</string>
    <string name="search_hint">Search plant names</string>

    <plurals name="plural_day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <string name="notes_sub_header">Notes:</string>
    <string name="delete_button_text">Delete</string>
    <string name="edit_button_text">Edit</string>
    <string name="add_plant_button">Add plant button</string>

    <plurals name="alert_dialog_plant_plural">
        <item quantity="one">plant</item>
        <item quantity="other">plants</item>
    </plurals>
    <string name="alert_dialog_title">Delete %1$d %2$s?</string>
    <string name="alert_dialog_text">You will not be able to recover %1$s after delete!</string>
    <string name="alert_dialog_button_ok">OK</string>
    <string name="alert_dialog_button_cancel">Cancel</string>

    <string name="reminder_text">It\'s time to water me</string>
    <string name="channel_name">Plants notifications</string>
    <string name="channel_description">Notification settings of your plants leve here</string>
    <string name="default_time" translatable="false">10:00</string>
    <string name="choose_time">Set notification time:</string>
    <string name="welcome_text_1">Hello!</string>
    <string name="welcome_text_2">Add your first plant</string>
    <string name="new_plant_toolbar_title">New plant</string>
    <string name="edit_plant_toolbar_title">Edit plant</string>
    <string name="long_click_chosen_text">Selected: %1$d</string>

    <string name="plant_photo_alert_title">Delete plant photo?</string>
    <string name="plant_photo_alert_message">
        The plant already has a photo, delete it and make a new one or choose an existing photo?
    </string>
    <string name="plant_photo_alert_dialog_negative_button">
        Make new
    </string>
    <string name="plant_photo_alert_dialog_positive_button">
        Chose this one
    </string>

    <string name="camera_fragment_name">Plant photo</string>

    <string name="image_capture_error">Oops, something went wrong…</string>

    <string name="camera_permission_text"><b>WaterIt</b> needs camera access to take photo of the plant.\nTap <b>Settings</b> > <b>Permissions</b>, and turn the <b>Camera</b> on.</string>

    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme_style_text">Theme style</string>
    <string name="light_mode">\tLight</string>
    <string name="night_mode">\tNight</string>
    <string name="auto_mode">\tAuto</string>
    <string name="notifications_sound_text">Notifications sound</string>
    <string name="device_default_sound">Default sound</string>
    <string name="app_s_custom_sound">App\'s custom</string>
    <string name="no_plants_yet">No plants yet</string>
    <string-array name="app_languages">
        <item>English</item>
        <item>Українська</item>
        <item>Русский</item>
    </string-array>
</resources>