<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sonofasleep.watertheplantapp.MainActivity">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/app_bar_sorting"
        android:icon="@drawable/ic_sort_desc"
        android:title="@string/sorting_plants_alphabetically"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/app_bar_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
</menu>