<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailPlantFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/main_toolbar" />

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="244dp"
            android:layout_height="244dp"
            android:contentDescription="@string/image_of_plant"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/notes_card_view"
            tools:src="@drawable/choose_flower_2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/notes_card_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/sixteen_dp_margin"
            android:backgroundTint="@color/main_background"
            app:cardCornerRadius="@dimen/view_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen_dp_margin">

                <TextView
                    android:id="@+id/notes_header"
                    style="@style/myTitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp_margin"
                    android:fillViewport="true"
                    android:paddingTop="@dimen/sixteen_dp_margin"
                    android:paddingBottom="@dimen/sixteen_dp_margin"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/notes_header">

                    <TextView
                        android:id="@+id/notes_text"
                        style="@style/myRegularText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="likes shadow\nlikes shadow\nlikes shadow\nlikes shadow\nlikes shadow\nlikes shadow\nlikes shadow\nlikes shadow\nlikes shadow\nlikes shadow\nlikes shadow" />

                </androidx.core.widget.NestedScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/watering_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp_margin"
            android:backgroundTint="@color/main_background"
            app:cardCornerRadius="@dimen/view_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen_dp_margin">

                <TextView
                    android:id="@+id/watering_header"
                    style="@style/myTitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_notification_periodicity_days"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/calendar_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp_margin"
                    android:src="@drawable/ic_calendar_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/watering_header" />

                <TextView
                    android:id="@+id/watering_type"
                    style="@style/myRegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sixteen_dp_margin"
                    app:layout_constraintBottom_toBottomOf="@id/calendar_icon"
                    app:layout_constraintStart_toEndOf="@id/calendar_icon"
                    app:layout_constraintTop_toTopOf="@id/calendar_icon"
                    tools:text="Ones a week" />

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp_margin"
                    android:src="@drawable/ic_time_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/calendar_icon" />

                <TextView
                    android:id="@+id/watering_time"
                    style="@style/myRegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sixteen_dp_margin"
                    app:layout_constraintBottom_toBottomOf="@id/time_icon"
                    app:layout_constraintStart_toEndOf="@id/time_icon"
                    app:layout_constraintTop_toTopOf="@id/time_icon"
                    tools:text="10:00" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp_margin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watering_card_view">

            <Button
                android:id="@+id/delete_button"
                style="@style/myButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main_blue_darker"
                android:text="@string/delete_button_text"
                tools:text="DELETE" />

            <Button
                android:id="@+id/edit_button"
                style="@style/myButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/edit_button_text" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>